--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Touristo</string>
+    <string name="login_or_signup_succeed">login or signup succeed</string>
+    <string name="log_out">Log out</string>
 </resources>
