--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">Touristo</string>
     <string name="login_or_signup_succeed">login or signup succeed</string>
     <string name="log_out">Log out</string>
+    <string name="welcome">Welcome</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="name">Name</string>
+    <string name="register_email">Email</string>
+    <string name="register_password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="sign_up_button">Sign Up</string>
+    <string name="are_you_registered_login">are you registered? login</string>
 </resources>
