--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="sign_up_button">Sign Up</string>
     <string name="are_you_registered_login">are you registered? login</string>
+    <string name="return_button_desc" />
 </resources>
